# AgenticAI

./: AdvancedRAG.md  README.md
rag_from_scratch/: pyproject.toml
rag_from_scratch/notebooks/: 001_simple_RAG.ipynb
rag_from_scratch/scripts/: 001_simple_RAG.py  RAG_with_semantic_chunking.py  context_enriched_retrieval.py  context_headers_RAG.py  main.py  run_RAG_files.sh  simple_RAG.py
rag_from_scratch/src/datareader_utils/: datareader.py
rag_from_scratch/src/helper_funcs/: similarity.py
rag_from_scratch/src/preprocessor_utils/: chunking_with_breakpoints.py  embeddings.py  generate_chunk_headers.py  simple_chunking.py
rag_from_scratch/tests/: datareader_tests.py
streamlit_stats_app/: README.md  pyproject.toml
streamlit_stats_app/data/: sample.csv
streamlit_stats_app/src/streamlit_stats_app/: crew.py  main.py  streamlit_stats_app.py
streamlit_stats_app/src/streamlit_stats_app/config/: agents.yaml  streamlit_stats_app.yaml  tasks.yaml
