[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "jiter>=0.10.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.3",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.1",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.14.0",
]
