[project]
name = "streamlit_stats_app"
version = "0.1.0"
description = "streamlit-stats-app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
streamlit_stats_app = "streamlit_stats_app.main:run"
run_crew = "streamlit_stats_app.main:run"
train = "streamlit_stats_app.main:train"
replay = "streamlit_stats_app.main:replay"
test = "streamlit_stats_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
